--- a/module/Usuarios/view/layout/layoutCorrespondencia.phtml
+++ b/module/Usuarios/view/layout/layoutCorrespondencia.phtml
@@ -29,6 +29,7 @@
     <script>
 
 		$(document).ready(function(){
+			//FUNCION PARA CARGAR EL COMBO BOX DE SUCURSALES
 			$("#EMP_ID").change(function() {
 				if($('#EMP_ID').val() != '' && $('#EMP_ID').val() != null){
 		            $.ajax({
@@ -54,6 +55,7 @@
 				}
 	        });
 
+			//FUNCION PARA CARGAR Y SELECCIONAR LA SUCURSAL CUANDO EL FORMULARIO ES DE ACTUALIZACION
 			$("#EMP_ID").ready(function() {
 			if($('#EMP_ID').val() != '' && $('#EMP_ID').val() != null){
 		            $.ajax({
@@ -81,9 +83,9 @@
 				}
 	        });
 
+			//FUNCION PARA CARGAR EL COMBO BOX DE ESTADOS EN BASE A UN PAIS SELECCIONADO
 			$("#PAI_ID").change(function() {
 				if($('#PAI_ID').val() != '' && $('#PAI_ID').val() != null){
-					/*FUNCION PARA CARGAR EL COMBO BOX DE ESTADOS EN BASE A UN PAIS SELECCIONADO*/
 		            $.ajax({
 		                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'estados')) ?>",
 		                type: "POST",
@@ -122,6 +124,35 @@
 				}
 	        });
 
+			//FUNCION PARA CARGAR LOS ESTADOS CUANDO EL FORMULARIO SEA DE ACTUALIZACION
+			$("#PAI_ID").ready(function() {
+				if($('#PAI_ID').val() != '' && $('#PAI_ID').val() != null){
+			            $.ajax({
+			                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'estados')) ?>",
+			                type: "POST",
+			                dataType: "json",
+			                data: "pais=" + $('#PAI_ID').val(),
+			                beforeSend: function() {
+			                	 $("#EST_ID").html("");
+			                	 $("#EST_ID").append('<option>Procesando, espere por favor...</option>');
+			                }
+			            }).done(function(estados) {
+			                $("#EST_ID").html("");
+			                $("#EST_ID").append('<option>-- Seleccione un estado --</option>');
+			                for (estado in estados) {
+								if(estado == $('#estado_oculto').val()){
+									 var selected = 'selected="selected"';
+								}
+			                    $("#EST_ID").append('<option value="' + estado + '" '+selected+'>' + estados[estado] + '</option>');
+			                }
+			                $("#EST_ID").prop("disabled", false);
+			            });
+				}else{
+					$("#EST_ID").prop("disabled", true);
+				}
+		    });
+
+			//FUNCION PARA CARGAR EL COMBO BOX DE CIUDADES EN BASE A UN ESTADO
 			$("#EST_ID").change(function() {
 				if($('#EST_ID').val() != '' && $('#EST_ID').val() != null){
 		            $.ajax({
@@ -146,6 +177,35 @@
 				}
 	        });
 
+			//FUNCION PARA CARGAR LAS CIUDADES CUANDO EL FORMULARIO SEA DE ACTUALIZACION
+			$("#EST_ID").ready(function() {
+				if($('#EST_ID').val() != '' && $('#EST_ID').val() != null){
+			            $.ajax({
+			                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'ciudades')) ?>",
+			                type: "POST",
+			                dataType: "json",
+			                data: "estado=" + $('#estado_oculto').val(),
+			                beforeSend: function() {
+			                	 $("#CIU_ID").html("");
+			                	 $("#CIU_ID").append('<option>Procesando, espere por favor...</option>');
+			                }
+			            }).done(function(ciudades) {
+			                $("#CIU_ID").html("");
+			                $("#CIU_ID").append('<option>-- Seleccione una ciudad --</option>');
+			                for (ciudad in ciudades) {
+								if(ciudad == $('#ciudad_oculto').val()){
+									 var selected = 'selected="selected"';
+								}
+			                    $("#CIU_ID").append('<option value="' + ciudad + '" '+selected+'>' + ciudades[ciudad] + '</option>');
+			                }
+			                $("#CIU_ID").prop("disabled", false);
+			            });
+				}else{
+					$("#CIU_ID").prop("disabled", true);
+				}
+		    });
+
+			//FUNCION PARA TRAER EL CODIGO DE CIUDAD (TELEFONO)
 			$("#CIU_ID").change(function() {
 				if($('#CIU_ID').val() != '' && $('#CIU_ID').val() != null){
 					
@@ -164,8 +224,9 @@
 
 			});
 
+			//FUNCION PARA CARGAR LA FECHA DE NACIMIENTO CON UN DATEPICKER
 			$( "#CON_FECHA_NACIMIENTO_PERSONAL" ).datepicker({
-				dateFormat:'dd/mm/yy',
+				dateFormat:'dd-MM-y',
 				changeMonth: true,
 				 changeYear: true,
 				 yearRange: '-100:+0',
