--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -11,9 +11,8 @@
 
  <table class="table">
  <tr>
-     <th>Title</th>
-     <th>Artist</th>
-     <th>&nbsp;</th>
+     <th>Id</th>
+     <th>Empresa</th>
  </tr>
 
  <?php foreach ($empresas as $empresa) : ?>
