--- a/module/Empresas/view/empresas/empresas/add.phtml
+++ b/module/Empresas/view/empresas/empresas/add.phtml
@@ -33,6 +33,50 @@ echo $this->form ()->openTag ( $form );
 <?php echo $this->formRow($form->get('EMP_SECTOR')); ?>
 <?php echo $this->formRow($form->get('EMP_EMAIL')); ?>
 <?php echo $this->formRow($form->get('EMP_PAGINA_WEB')); ?>
+<hr>
+<table>
+	<tr>
+		<td><?php echo $this->formRow($form->get('TIP_TEL_ID[]')); ?></td>
+		<td><?php echo $this->formRow($form->get('DET_CON_CODIGO_PAIS[]')); ?></td>
+		<td><?php echo $this->formRow($form->get('DET_CON_CODIGO_CIUDAD[]')); ?></td>
+		<td><?php echo $this->formRow($form->get('DET_CON_VALOR[]')); ?></td>
+		<td><?php echo $this->formRow($form->get('DET_CON_EXTENSION[]')); ?></td>
+		<td><?php echo $this->formRow($form->get('ADD[]')); ?></td>
+	</tr>
+</table>
 <?php echo $this->formRow($form->get('SUBMIT')); ?>
 
 <?php echo $this->form()->closeTag(); ?>
+
+<script>
+
+	$(document).ready(function(){
+		//Carga del combo box de Códigos de teléfono de Ciudades
+		$("#det_con_codigo_ciudad").prop("disabled", true);
+		$("#det_con_codigo_pais").change(function() {
+			if($('#det_con_codigo_pais').val() != '' && $('#det_con_codigo_pais').val() != null){
+	            $.ajax({
+	                url: "<?php echo $this->url('empresas', array('controller' => 'empresas', 'action' => 'codigoCiudad')) ?>",
+	                type: "POST",
+	                dataType: "json",
+	                data: "det_con_codigo_pais=" + $(this).val(),
+	                beforeSend: function() {
+	                	$("#det_con_codigo_ciudad").html("");
+	                	$("#det_con_codigo_ciudad").append('<option>Procesando, espere por favor...</option>');
+	                }
+	            }).done(function(ciudades) {
+	                $("#det_con_codigo_ciudad").html("");
+	                $("#det_con_codigo_ciudad").append('<option>-- Seleccione --</option>');
+	                for (ciudad in ciudades) {
+	                    $("#det_con_codigo_ciudad").append('<option value="' + ciudad + '">' + ciudades[ciudad] + '</option>');
+	                }
+	                $("#det_con_codigo_ciudad").prop("disabled", false);
+	            });
+			}else{
+				$("#det_con_codigo_ciudad").prop("disabled", true);
+				$("#det_con_codigo_ciudad").html("");
+				$("#det_con_codigo_ciudad").append('<option>-- Seleccione --</option>');
+			}
+        });
+	});
+</script>
