--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -6,7 +6,7 @@
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
  <p>
-     <a href="<?php echo $this->url('empresas', array('action'=>'add'));?>">Crear Nueva Empresa</a>
+     <a href="<?php echo $this->url('empresas', array('action'=>'add'));?>" class="btn btn-primary">Crear Nueva Empresa</a>
  </p>
 <div id="table">
  <table class="table">
