--- a/module/Empresas/view/empresas/empresas/add.phtml
+++ b/module/Empresas/view/empresas/empresas/add.phtml
@@ -28,30 +28,37 @@ echo $this->form ()->openTag ( $form );
 
 <div class="row">
   	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_NOMBRE')); ?></div>
+  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_EMP_ID')); ?></div>  	
+
+</div>
+
+<div class="row">
 	<div class="col-md-6"><?php echo $this->formRow($form->get('CAT_EMP_ID')); ?></div>
-</div>
-
-<div class="row">
   	<div class="col-md-6"><?php echo $this->formRow($form->get('PAI_ID')); ?></div>
+
+</div>
+
+<div class="row">
 	<div class="col-md-6"><?php echo $this->formRow($form->get('EST_ID')); ?></div>
-</div>
-
-<div class="row">
 	<div class="col-md-6"><?php echo $this->formRow($form->get('CIU_ID')); ?></div>	
+
+</div>
+
+<div class="row">
   	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_DIRECCION')); ?></div>
-</div>
-
-<div class="row">
 	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_SECTOR')); ?></div>
-	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_REFERENCIA')); ?></div>
+
 </div>
 
 <div class="row">
+	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_REFERENCIA')); ?></div>
   	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_EMAIL')); ?></div>
+
+</div>
+
+<div class="row">
 	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_PAGINA_WEB')); ?></div>
 </div>
-
-
 
 
 <hr>
