relación modelo er empresas-contactos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,3 +51,15 @@ ul.error_container li label {font-weight: normal; color:#843433;}
 input.error, select.error, textarea.error{
   border:1px solid #ff0000 !important;
 }
+/* Autocompleter Functionality */
+.twitter-typeahead { display:inline !important; }
+.tt-dropdown-menu { 
+  background-color: #fff; 
+  border: 1px solid #ccc;
+  border-radius: 4px; 
+  padding:5px 10px !important; 
+  min-width:200px; 
+}
+.tt-dropdown-menu p { margin:0px; }
+.tt-suggestion.tt-cursor { background-color:#5c9ccc; color: #fff; }
+.tt-suggestion p { padding:3px 10px }
