--- a/module/Empresas/view/empresas/empresas/add.phtml
+++ b/module/Empresas/view/empresas/empresas/add.phtml
@@ -231,5 +231,45 @@ echo $this->form ()->openTag ( $form );
 			indice_detalle_contacto++;
 		});
 
+		var empresas = new Bloodhound({
+			datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+			queryTokenizer: Bloodhound.tokenizers.whitespace,
+			remote: '<?php echo $this->basePath() ?>/empresas/consultaXmlHttp/%QUERY'
+		});
+		 
+		empresas.initialize();
+		 
+		$('#emp_emp_id').typeahead(null, {
+			name: 'emp_emp_id',
+			displayKey: 'value',
+			source: empresas.ttAdapter(),
+
+
+		});
+
+		/* constructs the suggestion engine
+		var states = new Bloodhound({
+		datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+		queryTokenizer: Bloodhound.tokenizers.whitespace,
+		// `states` is an array of state names defined in "The Basics"
+		local: $.map(states, function(state) { return { value: state }; })
+		});
+		 
+		// kicks off the loading/processing of `local` and `prefetch`
+		states.initialize();
+		 
+		$('#bloodhound .typeahead').typeahead({
+		hint: true,
+		highlight: true,
+		minLength: 1
+		},
+		{
+		name: 'states',
+		displayKey: 'value',
+		// `ttAdapter` wraps the suggestion engine in an adapter that
+		// is compatible with the typeahead jQuery plugin
+		source: states.ttAdapter()
+		});*/
+
 	});
 </script>
