--- a/module/Contactos/view/contactos/index/listado.phtml
+++ b/module/Contactos/view/contactos/index/listado.phtml
@@ -10,20 +10,24 @@
  <table class="table">
  <tr>
  	 <th>&nbsp;</th>
-     <th>CODIGO</th>
      <th>CARGO</th>
+     <th>EMPRESA</th>
      <th>SUCURSAL</th>
      <th>TIPO DE PERSONA</th>
+	 <th>PAIS</th>
+	 <th>ESTADO</th>
      <th>CIUDAD</th>
      <th>NOMBRE</th>
      <th>APELLIDO</th>
      <th>EMAIL</th>
-     <th>OBSERVACIONES</th>
      <th>IDIOMA</th>
-     <th>USUARIO</th>
+     <th>USUARIO DE REGISTRO</th>
      <th>FECHA DE ACTUALIZACI&Oacute;N</th>
-     <th>&iquest;ES PRIVADO?</th>
+    
+    <?php if(strtoupper($this->tipo_usuario) != 'O'): ?>
+    
      <!-- DATOS PRIVADOS -->
+     <th>&iquest;ES PRIVADO?</th>
      <th>FECHA DE NACIMIENTO</th>
      <th>DIRECCIO&Oacute;N DE DOMICILIO</th>
      <th>EMAIL PERSONAL</th>
@@ -31,23 +35,69 @@
      <th>C&Oacute;DIGO DE CIUDAD</th>
      <th>TEL&Eacute;FONO DE DOMICILIO</th>
      <th>CELULAR PERSONAL</th>
-     <th>&nbsp;</th>
+     <th>OBSERVACIONES</th>
+     
+     <?php endif; ?>
+     
  </tr>
  <?php foreach ($this->contactos as $contactos) : ?>
  <tr>
- 	 <td><a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'ingresar', 'id' => $contactos->getCon_id()))?>" title="Actualizar" alt="Actualizar">ACT.</a></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_id());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCar_id());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getSuc_id());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getTip_per_id());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCiu_id());?></td>
+ 	 <td><a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'editar', 'id' => $contactos->getCon_id(), 'lang' => $contactos->getCon_idioma()))?>" title="Actualizar" alt="Actualizar">ACT.</a></td>
+     <td>
+     	<?php 
+      		if(strtoupper($contactos->getCon_idioma()) == 'E'):
+      			echo $this->escapeHtml($contactos->getCargo_descripcion_es());
+      		else: 
+   	  			echo $this->escapeHtml($contactos->getCargo_descripcion_en());
+  			endif;
+  		?>
+     </td>
+  
+     <td>
+     <?php 
+     
+     	$empresa = $contactos->getSucursal_nombre();
+     
+     	if(!isset($empresa) || is_null($empresa)){
+     		echo $this->escapeHtml($contactos->getEmpresa_nombre());
+     	}else{
+     		echo $this->escapeHtml($contactos->getSucursal_nombre());
+     	}
+     	?>
+     
+     	
+     </td>
+     <td><?php echo $this->escapeHtml($contactos->getEmpresa_nombre());?></td>
+     <td>
+    	 <?php 
+      		if(strtoupper($contactos->getCon_idioma()) == 'E'):
+      			echo $this->escapeHtml($contactos->getTipo_persona_descripcion_es());
+      		else: 
+   	  			echo $this->escapeHtml($contactos->getTipo_persona_descripcion_en());
+  			endif;
+  		?>
+     
+     </td>
+	 <td><?php echo $this->escapeHtml($contactos->getPais_nombre());?></td>
+	 <td><?php echo $this->escapeHtml($contactos->getEstado_nombre());?></td>
+     <td><?php echo $this->escapeHtml($contactos->getCiudad_nombre());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_nombre());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_apellido());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_email());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_observaciones());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_idioma());?></td>
+     <td>
+     	<?php
+     		if(strtoupper($contactos->getCon_idioma()) == 'E'){
+     			echo 'Espa&ntilde;ol';
+     		}else{
+     			echo 'Ingl&eacute;s';
+     		}
+     	?>
+     </td>
      <td><?php echo $this->escapeHtml($contactos->getCon_usuario());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_fecha_actualizacion());?></td>
+     
+     <?php if(strtoupper($this->tipo_usuario) != 'O'): ?>
+       
      <td><?php echo $this->escapeHtml($contactos->getCon_privado());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_fecha_nacimiento_personal());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_direccion_domicilio_per());?></td>
@@ -56,6 +106,9 @@
      <td><?php echo $this->escapeHtml($contactos->getCon_codigo_ciudad());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_telefono_domicilio_per());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_celular_personal());?></td>
+     <td><?php echo $this->escapeHtml($contactos->getCon_observaciones());?></td>
+     
+     <?php endif; ?>
  </tr>
  <?php endforeach; ?>
  </table>
