Actualizacion Modulo de Contactos Ingreso, Actualizacion Layout Correspondencia
Change-Id: I12a36dd32183eda73008d7871812027218052029

--- a/module/Contactos/view/contactos/index/ingresar.phtml
+++ b/module/Contactos/view/contactos/index/ingresar.phtml
@@ -334,9 +334,9 @@ echo $this->formelementerrors ( $ciudad_oculto );
 
 		$("#CON_IDIOMA").change(function(){
 			if($("#CON_IDIOMA").val() == 'I'){
-				location.href = '<?php echo $this->url('contactos',array('controller'=>'index', 'action' => 'ingresar', 'id' => $this->id, 'lang' => 'I'))?>';
+				location.href = '<?php echo $this->url('contactos',array('controller'=>'index', 'action' => $this->action, 'id' => $this->id, 'lang' => 'I'))?>';
 			}else{
-				location.href = '<?php echo $this->url('contactos',array('controller'=>'index', 'action' => 'ingresar', 'id' => $this->id, 'lang' => 'E'))?>';
+				location.href = '<?php echo $this->url('contactos',array('controller'=>'index', 'action' => $this->action, 'id' => $this->id, 'lang' => 'E'))?>';
 			}
 		});
 
