--- a/module/Usuarios/view/layout/layoutCorrespondencia.phtml
+++ b/module/Usuarios/view/layout/layoutCorrespondencia.phtml
@@ -21,7 +21,7 @@
 
         <!-- Scripts -->
         <?php echo $this->headScript()
-        	->prependFile($this->basePath() . '/js/datatables/media/js/jquery.dataTables.min.js')
+        	->prependFile($this->basePath() . '/js/datatables/media/js/jquery.dataTables.js')
             ->prependFile($this->basePath() . '/js/jquery-validation/dist/jquery.validate.js')
             ->prependFile($this->basePath() . '/js/bootstrap.min.js')
             ->prependFile($this->basePath() . '/js/jquery-ui-min.js')
