--- a/module/Contactos/view/contactos/index/ingresar.phtml
+++ b/module/Contactos/view/contactos/index/ingresar.phtml
@@ -55,11 +55,16 @@ echo $this->formelementerrors ( $ciudad_oculto );
 <ul class="error_container bs-callout bs-callout-danger">
 
 </ul>
-<table width="100%">
+<table width="100%" style="font-size: 13px; font-weight: 700;">
 	<tr>
 		<td align="center" style="padding: 20px; padding-top: 0px;">
 		<h1 align="left">Ingresar Contacto</h1><hr />
+		<div class="panel panel-default">
+		<div class="panel-heading panel-heading-txt">&nbsp;</div>
 			<table width="100%" cellpadding="5">
+				<tr>
+					<td colspan="3"><h3 align="left">Informaci&oacute;n Personal</h3><hr /></td>
+				</tr>
 				<tr>
 					<td>
 					<?php echo $formLabel->openTag() . $con_idioma->getLabel() . $formLabel->closeTag();
@@ -150,11 +155,22 @@ echo $this->formelementerrors ( $ciudad_oculto );
 					?>
 					</td>
 				</tr>
-			</table>
-			
-			<table width="100%" cellpadding="5" <?php if($this->privado == 'S' && $this->tipo_usuario != 'A'){ echo 'style="display:none"'; }?>>				
 				<tr>
-					<td colspan="3"><hr /><h1 align="left">Informaci&oacute;n Privada</h1><hr /></td>
+					<td  colspan="3">
+					<?php echo $formLabel->openTag() . $con_observaciones->getLabel() . $formLabel->closeTag();
+					      echo html_entity_decode( $this->formtextarea( $con_observaciones ) );
+						  echo html_entity_decode( $this->formelementerrors ( $con_observaciones ) );
+					?>
+					</td>
+				</tr>
+			</table>
+			</div>
+			</div>
+			<div class="panel panel-default" <?php if($this->privado == 'S' && $this->tipo_usuario == 'O'){ echo 'style="display:none"'; }?>>
+			<div class="panel-heading">&nbsp;</div>
+			<table width="100%" cellpadding="5">				
+				<tr>
+					<td colspan="3"><h3 align="left">Informaci&oacute;n Privada</h3><hr /></td>
 				</tr>
 				<tr <?php if($this->tipo_usuario != 'A' && $this->privado == 'N'): echo 'style="display:none"'; endif;?>>
 					<td>
@@ -183,14 +199,24 @@ echo $this->formelementerrors ( $ciudad_oculto );
 				</tr>
 				<tr>
 					<td>
-					<?php echo $formLabel->openTag() . $con_codigo_pais->getLabel() . $formLabel->closeTag();
-					      echo html_entity_decode( $this->formtext ( $con_codigo_pais ) );
-						  echo html_entity_decode( $this->formelementerrors ( $con_codigo_pais ) );
-					?>
-					<?php echo $formLabel->openTag() . $con_codigo_ciudad->getLabel() . $formLabel->closeTag();
-					      echo html_entity_decode( $this->formtext ( $con_codigo_ciudad ) );
-						  echo html_entity_decode( $this->formelementerrors ( $con_codigo_ciudad ) );
-					?>
+						<table cellspacing="0" cellpadding="0" >
+						<tr>
+							<td>
+								<?php echo $formLabel->openTag() . $con_codigo_pais->getLabel() . $formLabel->closeTag(); ?>
+								<br />
+								<?php echo html_entity_decode( $this->formtext ( $con_codigo_pais ) );
+							  echo html_entity_decode( $this->formelementerrors ( $con_codigo_pais ) );
+							?>
+							</td>
+							<td>
+								<?php echo $formLabel->openTag() . $con_codigo_ciudad->getLabel() . $formLabel->closeTag(); ?>
+								<br />
+								<?php echo html_entity_decode( $this->formtext ( $con_codigo_ciudad ) );
+							  echo html_entity_decode( $this->formelementerrors ( $con_codigo_ciudad ) );
+							?>	
+							</td>
+						</tr>
+						</table>
 					</td>
 					<td>
 					<?php echo $formLabel->openTag() . $con_telefono_domicilio_per->getLabel() . $formLabel->closeTag();
@@ -205,67 +231,18 @@ echo $this->formelementerrors ( $ciudad_oculto );
 					?>
 					</td>		
 				</tr>
-				<tr>
-					<td  colspan="3">
-					<?php echo $formLabel->openTag() . $con_observaciones->getLabel() . $formLabel->closeTag();
-					      echo html_entity_decode( $this->formtextarea( $con_observaciones ) );
-						  echo html_entity_decode( $this->formelementerrors ( $con_observaciones ) );
-					?>
-					</td>
-				</tr>
 			</table>
-		</td>
-	</tr>
-</table>
-
-<table width="100%">
-		<tr>
-			<td colspan="5"><hr /><h1 align="left">N&uacute;meros de Contacto</h1><hr /></td>
-		</tr>
-		<?php for ( $indice_detalle_contacto=0; $indice_detalle_contacto<5; $indice_detalle_contacto++ ): ?>
+			<table width="100%" cellpadding="5">
 			<tr>
-				<?php 	
-				    $det_con_oculto=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][oculto]');
-					$tip_tel_id=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][TIP_TEL_ID]'); 
-					$det_con_codigo_pais=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_PAIS]');
-					$det_con_codigo_ciudad=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_CIUDAD]');
-					$det_con_valor=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_VALOR]');
-					$det_con_extension=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_EXTENSION]');
-
-					/* $tip_tel_id->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][TIP_TEL_ID]'); 
-					$det_con_codigo_pais->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_PAIS]');
-					$det_con_codigo_ciudad->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_CIUDAD]');
-					$det_con_valor->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_VALOR]');
-					$det_con_extension->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_EXTENSION]'); */
-
-					$det_con_oculto->setAttribute('data-group-id',$indice_detalle_contacto); 
-					$tip_tel_id->setAttribute('data-group-id',$indice_detalle_contacto); 
-					$det_con_codigo_pais->setAttribute('data-group-id',$indice_detalle_contacto);
-					$det_con_codigo_ciudad->setAttribute('data-group-id',$indice_detalle_contacto);
-					$det_con_valor->setAttribute('data-group-id',$indice_detalle_contacto);
-					$det_con_extension->setAttribute('data-group-id',$indice_detalle_contacto);
-
-					/* $tip_tel_id->setValue($detalle->getTip_tel_id());
-					$det_con_codigo_pais->setValue($detalle->getDet_con_codigo_pais());
-					$det_con_valor->setValue($detalle->getDet_con_valor());
-					$det_con_extension->setValue($detalle->getDet_con_extension()); */
-				?>
-				<?php echo html_entity_decode($this->formhidden($det_con_oculto)); ?>
-				<td><?php echo html_entity_decode($this->formRow($tip_tel_id)); ?></td>
-				<td><?php echo html_entity_decode($this->formRow($det_con_codigo_pais)); ?></td>
-				<td><?php echo html_entity_decode($this->formRow($det_con_codigo_ciudad)); ?></td>
-				<td><?php echo html_entity_decode($this->formRow($det_con_valor)); ?></td>
-				<td><?php echo html_entity_decode($this->formRow($det_con_extension)); ?></td>
-			</tr>	
-		<?php endfor; ?>
-</table>
-<hr />
-			<div>
-			<h1>Tipos de Contacto</h1>
-			</div>	
-			<hr />
-<table>
-		<?php for ( $indice_contacto_relacionado=0; $indice_contacto_relacionado<5; $indice_contacto_relacionado++ ): ?>
+				<td colspan="2">
+				
+				<hr />
+				<h3>Otra informaci&oacute;n personal</h3>	
+				<hr />
+				
+				</td>
+			</tr>
+			<?php for ( $indice_contacto_relacionado=0; $indice_contacto_relacionado<5; $indice_contacto_relacionado++ ): ?>
 			<tr>
 				<?php 	
 					$tip_con_id = $form->get('CONTACTO_RELACIONADO['.$indice_contacto_relacionado.'][TIP_CON_ID]'); 
@@ -287,46 +264,61 @@ echo $this->formelementerrors ( $ciudad_oculto );
 				<td><?php echo html_entity_decode($this->formRow($con_rel_valor)); ?></td>
 			</tr>	
 		<?php endfor; ?>
-</table>
+		<tr>
+			<td colspan="5">&nbsp;</td>
+		</tr>
+			</table>
+			</div>
+			</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">&nbsp;</div>
+<table width="100%">
+				<tr>
+					<td colspan="5"><h3 align="left">N&uacute;meros de Contacto</h3><hr /></td>
+				</tr>
+				<?php for ( $indice_detalle_contacto=0; $indice_detalle_contacto<5; $indice_detalle_contacto++ ): ?>	
+				<tr>
+				<?php 	
+				    $det_con_oculto=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][oculto]');
+					$tip_tel_id=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][TIP_TEL_ID]'); 
+					$det_con_codigo_pais=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_PAIS]');
+					$det_con_codigo_ciudad=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_CIUDAD]');
+					$det_con_valor=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_VALOR]');
+					$det_con_extension=$form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_EXTENSION]');
 
-<?php //echo html_entity_decode($this->formRow($form->get('ADD'))); ?>
- 
-<!--  
-<div class="contanier" style="margin: 15px; clear: left;">
-	<div class="panel panel-default">
-		<div class="panel-heading">&nbsp;</div>
-		<table class="table tabla-indicaciones" border="0">
-			<tr>
-				<td class="datos-title" style="border-bottom: 0px solid;">Indicaciones
-					M&eacute;dicas:</td>
+					$det_con_oculto->setAttribute('data-group-id',$indice_detalle_contacto); 
+					$tip_tel_id->setAttribute('data-group-id',$indice_detalle_contacto); 
+					$det_con_codigo_pais->setAttribute('data-group-id',$indice_detalle_contacto);
+					$det_con_codigo_ciudad->setAttribute('data-group-id',$indice_detalle_contacto);
+					$det_con_valor->setAttribute('data-group-id',$indice_detalle_contacto);
+					$det_con_extension->setAttribute('data-group-id',$indice_detalle_contacto);
+				?>
+				<?php echo html_entity_decode($this->formhidden($det_con_oculto)); ?>
+				<td><?php echo html_entity_decode($this->formRow($tip_tel_id)); ?></td>
+				<td><?php echo html_entity_decode($this->formRow($det_con_codigo_pais)); ?></td>
+				<td><?php echo html_entity_decode($this->formRow($det_con_codigo_ciudad)); ?></td>
+				<td><?php echo html_entity_decode($this->formRow($det_con_valor)); ?></td>
+				<td><?php echo html_entity_decode($this->formRow($det_con_extension)); ?></td>
 			</tr>
-			<tr>
-				<td style="padding-top: 10px; padding-bottom: 20px;">
-				<?php //echo $this->formtextarea($indicaciones);?>
-				<?php //echo html_entity_decode($this->formelementerrors($indicaciones)); ?>
-			</td>
-			</tr>
-			<tr>
-				<td class="datos-title" style="border-top: 0px solid;">Observaciones:</td>
-			</tr>
-			<tr>
-				<td style="padding-top: 10px;">
-				<?php //echo $this->formtextarea($diagnostico);?>
-				<?php //echo html_entity_decode($this->formelementerrors($diagnostico)); ?>
-			</td>
-			</tr>
-		</table>
+			
+		<?php endfor; ?>
+		<tr>
+			<td colspan="5">&nbsp;</td>
+		</tr>
+</table>
 	</div>
-</div>
--->
+	</div>
+		</td>
+	</tr>
+</table>
 
 	<hr />
 			<div align="center">
 				<?php echo $this->formsubmit( $form->get ( 'ingresar' ) ) ?>
 				<a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'listado'))?>" class ="btn btn-primary">Cancelar</a>
-			</div>			
+			</div>	
+					
 <?php echo $this->form()->closeTag(); ?>
-
 
 <script>
 
@@ -379,7 +371,6 @@ echo $this->formelementerrors ( $ciudad_oculto );
 	                    $(".det_con_codigo_ciudad[data-group-id="+data_group_id+"]").append('<option value="' + ciudad + '" '+selected+'>' + ciudades[ciudad] + '</option>');
 	                }
 	                $(".det_con_codigo_ciudad[data-group-id="+data_group_id+"]").prop("disabled", false);
-					//$(".det_con_codigo_ciudad[data-group-id="+data_group_id+"]").val(''+ciu_id);
 	                
 	            });
 			}else{
@@ -392,12 +383,7 @@ echo $this->formelementerrors ( $ciudad_oculto );
 		<?php if(sizeof($detalles)<=0): for ($i=0; $i<10; $i++):?>
 			codigoCiudadSelect(<?php echo $i ?>);
 			
-		<?php endfor; else: ?>
-
-		<?php foreach($detalles as $key=>$detalle): ?>
-			codigoCiudadSelect(<?php echo $key . ($detalle->getDet_con_codigo_ciudad()!=''?(",'".$detalle->getDet_con_codigo_ciudad()."'"):'') ?>);
-		<?php endforeach; ?>
-		<?php endif; ?>
+		<?php endfor; endif; ?>
 
 	});
 </script>
