--- a/module/Contactos/view/contactos/index/listado.phtml
+++ b/module/Contactos/view/contactos/index/listado.phtml
@@ -6,8 +6,8 @@
  <p>
      <a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action'=>'ingresar'));?>" class="btn btn-primary">Ingresar un nuevo registro</a>
  </p>
-<div style=" width:1300px; overflow: auto; padding-bottom: 100px;  ">
- <table class="table" style="width: 3000px; font-size: 12px;" >
+<div style=" width:1250px; overflow: auto; padding-bottom: 100px;  ">
+ <table class="table table-striped table-bordered table-hover " style="width: 3000px; font-size: 12px;" >
  <thead style="">
  <tr>
  	 <th>&nbsp;</th>
