--- a/module/Usuarios/view/layout/layoutCorrespondencia.phtml
+++ b/module/Usuarios/view/layout/layoutCorrespondencia.phtml
@@ -239,7 +239,7 @@
 
 			//FUNCION PARA CARGAR LA FECHA DE NACIMIENTO CON UN DATEPICKER
 			$( "#CON_FECHA_NACIMIENTO_PERSONAL" ).datepicker({
-				dateFormat:'dd-MM-y',
+				dateFormat:'dd-M-y',
 				changeMonth: true,
 				 changeYear: true,
 				 yearRange: '-100:+0',
@@ -254,19 +254,48 @@
         
     </head>
     <body>
-    	<table width="100%"  id="contenedor_principal">
+    <div class="top-line">&nbsp;</div>
+    	<table width="100%"  id="contenedor_principal" border="0">
     		<tr>
-    			<td colspan="2"><img id='logo' width=88 height=31 src='<?php echo $this->basePath();?>/img/logo.gif'></img></td>
+    			<td style="padding-left: 30px; padding-top: 0px;"><img id='logo' width=88 height=31 src='<?php echo $this->basePath();?>/img/logo.gif'></img></td>
+    			<td align="right">
+	    			<table cellspacing="0" cellpadding="0" border="0" width="35%">
+						<tr>
+							<td style="border-bottom: 2px solid #16ABD9; padding-bottom: 0px;">
+								<div style="float: left;  padding-right: 5px; font-size: 21px; padding-top: 5px; ">
+									<span style="color: #9C9FA2; padding-left: 5px;">Bienvenido: </span> 
+									<img src=" <?php echo $this->basepath() . '/img/png/user.png'?>" border="0" align="absmiddle" style="padding-bottom: 0px;" />
+									
+								</div>
+								<div class="btn-group">
+									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 18px; padding-left: 4px ;">Emanuel Carrasco &nbsp;<span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="#"><i class="icon-pencil"></i> Actualizar contrase&ntilde;a</a></li>
+										<li class="divider"></li>
+										<li><a href="#"><i class="i"></i> Salir del Sistema</a></li>
+									</ul>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td align="center" style="padding-top: 8px; color: #9C9FA2; font-size: 12px;"><?php date_default_timezone_set('America/Guayaquil'); echo date('l') . ', ' . date('d') . ' de ' . date('M') . ' de ' . date('Y'); ?></td>
+						</tr>
+					</table>
+    			</td>
     		</tr>
     		<tr>
     			<td class="menu">
 					<ul id="menu">
-						<li><a href="<?php echo $this->url('usuarios', array('controller' => 'index', 'action' => 'index'))?>">Inicio</a></li>
-						<li><a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'listado'))?>">Contactos</a></li>
-						<li><a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Empresas</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/home.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('usuarios', array('controller' => 'index', 'action' => 'index'))?>">Inicio</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/contacto.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'listado'))?>">Contactos</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/empresas.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Empresas</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/correspondencia.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Correspondencia</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/recepcion.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Fe de recepci&oacute;n</a></li>
 					</ul>
     			</td>
-    			<td><?php echo $this->content; ?></td>
+    			<td valing="top" style="padding: 30px; padding-top: 0px;">
+    				<?php echo $this->content; ?>
+    			</td>
     		</tr>
     		<tr>
     			<td colspan="2">
