--- a/module/Contactos/view/contactos/index/listado.phtml
+++ b/module/Contactos/view/contactos/index/listado.phtml
@@ -1,11 +1,20 @@
  <?php
- $title = 'Contactos';
+ $title = 'Listado de contactos';
  $this->headTitle($title);
  ?>
- <h1><?php echo $this->escapeHtml($title); ?></h1>
- <p>
-     <a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action'=>'ingresar'));?>" class="btn btn-primary">Ingresar un nuevo registro</a>
- </p>
+ <table cellspacing="0" cellpadding="0" border="0" align="left" width="100%">
+	<tr>
+		<td width="50" valign="middle"><img src="<?php echo $this->basepath() . '/img/png/contacto_grande.png'?>" border="0" /></td>
+		<td class="titulo_menu_item_pages"><span class="titulo_modulo_pages"><?php echo $this->escapeHtml($title); ?></span><br />Visualizar, buscar y verificar todos los contactos ingresados en el sistema.</td>
+	</tr>
+	<tr>
+		<td colspan="2" style="padding-bottom: 20px;"><hr /></td>
+	</tr>
+</table>
+ <div style="padding-bottom: 30px;">
+     <a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action'=>'ingresar'));?>" class="btn btn-primary">
+     <img src="<?php echo $this->basepath() . '/img/png/ingresar.png'?>" />Ingresar un nuevo registro</a>
+ </div>
 <div style=" width:1250px; overflow: auto; padding-bottom: 100px;  ">
  <table class="table table-striped table-bordered table-hover " style="width: 3000px; font-size: 12px;" >
  <thead style="">
