--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,15 @@ div.container a.brand {
 	background-color: #5C9CCC;
 }
 
+.titulo_menu_item_pages{
+	font-weight: 700;
+	font-size: 17px;
+}
+
+.titulo_modulo_pages{
+	color: #5C9CCC;
+	text-transform: uppercase;
+}
 #contenedor_principal { border:none; }
 #contenedor_principal tr td { padding:10px; }
 #contenedor_principal tr td.menu { vertical-align: top; background:#FFF; width:280px; border-right: 3px solid #5C9CCC; !important;}
@@ -60,6 +69,11 @@ ul.error_container li label {font-weight: normal; color:#843433;}
 input.error, select.error, textarea.error{
   border:1px solid #ff0000 !important;
 }
+
+hr{
+	margin: 0 0;
+}
+
 
 /******* VALIDACIONES FORMULARIO ************/
 .fecha_nacimiento{
